--- a/Test for LM.ipynb
+++ b/Test for LM.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-18-9502b000083e>:3: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+      "<ipython-input-7-9502b000083e>:3: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
       "  SensorPosition = np.array([\n"
      ]
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "# 磁铁位置范围\n",
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "# 磁矩M\n",
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "theoryData = np.empty((16, 200, 3, 1))\n",
@@ -108,13 +108,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-22-99f749967be9>:2: DeprecationWarning: `np.int` is a deprecated alias for the builtin `int`. To silence this warning, use `int` by itself. Doing this will not modify any behavior and is safe. When replacing `np.int`, you may wish to use e.g. `np.int64` or `np.int32` to specify the precision. If you wish to review your current use, check the release note link for additional information.\n",
+      "<ipython-input-11-99f749967be9>:2: DeprecationWarning: `np.int` is a deprecated alias for the builtin `int`. To silence this warning, use `int` by itself. Doing this will not modify any behavior and is safe. When replacing `np.int`, you may wish to use e.g. `np.int64` or `np.int32` to specify the precision. If you wish to review your current use, check the release note link for additional information.\n",
       "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
       "  Gain = np.empty((16, 3, 1),dtype=np.int)\n"
      ]
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "import test\n",
@@ -158,8 +158,7 @@
     "params[7, 0] = Offset[0,1,0]\n",
     "params[8, 0] = Offset[0,2,0]\n",
     "\n",
-    "data_input = theoryData[0]\n",
-    "data_output = test.generate_data(params,theoryData[0])"
+    "data_input = theoryData[0]\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -170,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "params = np.zeros((9, 1))\n",
@@ -192,73 +191,7 @@
     "H3 = params[5, 0]\n",
     "O1 = params[6, 0]\n",
     "O2 = params[7, 0]\n",
-    "O3 = params[8, 0]"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "outputs": [],
-   "source": [
-    "J = test.cal_Jacobian(params,theoryData[0]).reshape(200,9,3)\n",
-    "residual = test.cal_residual(params,data_input, data_output)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "outputs": [],
-   "source": [
-    "A0 = J[:,:,0].T.dot(J[:,:,0])\n",
-    "A1 = J[:,:,1].T.dot(J[:,:,1])\n",
-    "A2 = J[:,:,2].T.dot(J[:,:,2])\n",
-    "A = A0 + A1 + A2"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "outputs": [],
-   "source": [
-    "g0 = J[:,:,0].T.dot(residual[:,0])\n",
-    "g1 = J[:,:,1].T.dot(residual[:,1])\n",
-    "g2 = J[:,:,2].T.dot(residual[:,2])\n",
-    "g = g0 + g1 + g2"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "outputs": [],
-   "source": [
-    "u0 = test.get_init_u(A0, 10**-3)\n",
-    "u1 = test.get_init_u(A1, 10**-3)\n",
-    "u2 = test.get_init_u(A2, 10**-3)\n",
-    "u = u0 + u1 + u2"
+    "O3 = params[8, 0]\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -272,11 +205,7 @@
    "execution_count": 29,
    "outputs": [],
    "source": [
-    "Hessian_LM0 = A0 + u0 * np.eye(9)\n",
-    "Hessian_LM1 = A1 + u1 * np.eye(9)\n",
-    "Hessian_LM2 = A2 + u2 * np.eye(9)\n",
-    "Hessian_LM = Hessian_LM0 + Hessian_LM1 + Hessian_LM2\n",
-    "HM_INV = np.linalg.inv(Hessian_LM)"
+    "R = test.EulerToMatrix(np.array([[H1], [H2], [H3]]))"
    ],
    "metadata": {
     "collapsed": false,
@@ -288,13 +217,18 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[1599.56477773,  -26.09831653,   26.67207772],\n       [  26.52421907, 1599.57639761,  -25.5306487 ],\n       [ -26.2485744 ,   25.96586403, 1599.57393897]])"
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "step0 = np.linalg.inv(Hessian_LM0).dot(g0)\n",
-    "step1 = np.linalg.inv(Hessian_LM1).dot(g1)\n",
-    "step2 = np.linalg.inv(Hessian_LM2).dot(g2)\n",
-    "ste = np.linalg.inv(Hessian_LM).dot(g)\n",
-    "step = step0 + step1 + step2"
+    "np.diag([G1,G2,G3]).dot(R)"
    ],
    "metadata": {
     "collapsed": false,
@@ -306,9 +240,18 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[1599.56477773,  -26.09831653,   26.67207772],\n       [  26.52421907, 1599.57639761,  -25.5306487 ],\n       [ -26.2485744 ,   25.96586403, 1599.57393897]])"
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "new_params = params + step0 + step1 +step2"
+    "np.dot(np.diag([G1,G2,G3]), R)"
    ],
    "metadata": {
     "collapsed": false,
@@ -320,51 +263,23 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "outputs": [],
-   "source": [
-    "new_residual = test.cal_residual(new_params,data_input, data_output)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "index 1 is out of bounds for axis 0 with size 1",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mIndexError\u001B[0m                                Traceback (most recent call last)",
+      "\u001B[0;32m<ipython-input-32-2490ca200a65>\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[0;32m----> 1\u001B[0;31m \u001B[0mtest\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mmy_Func\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mparams\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0mtheoryData\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;36m0\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m",
+      "\u001B[0;32m/media/asuka/LINUX2/Pycharm-Projects/磁定位/test.py\u001B[0m in \u001B[0;36mmy_Func\u001B[0;34m(params, input_data)\u001B[0m\n\u001B[1;32m     40\u001B[0m     \u001B[0mX\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mnp\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mzeros\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;36m200\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;36m3\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;36m1\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     41\u001B[0m     \u001B[0mR\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mEulerToMatrix\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mnp\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0marray\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0mH1\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m[\u001B[0m\u001B[0mH2\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m[\u001B[0m\u001B[0mH3\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m---> 42\u001B[0;31m     \u001B[0;32mfor\u001B[0m \u001B[0mi\u001B[0m \u001B[0;32min\u001B[0m \u001B[0mrange\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;36m0\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;36m200\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m     43\u001B[0m         \u001B[0mX\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0mi\u001B[0m\u001B[0;34m]\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mnp\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mdot\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mnp\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mdiag\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0mG1\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0mG2\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0mG3\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mR\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mdot\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0minput_data\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0mi\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m)\u001B[0m \u001B[0;34m+\u001B[0m \u001B[0mnp\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0marray\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0mO1\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m[\u001B[0m\u001B[0mO2\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m[\u001B[0m\u001B[0mO3\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     44\u001B[0m     \u001B[0;32mreturn\u001B[0m \u001B[0mX\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;32m/media/asuka/LINUX2/Pycharm-Projects/磁定位/test.py\u001B[0m in \u001B[0;36mEulerToMatrix\u001B[0;34m(H)\u001B[0m\n\u001B[1;32m     14\u001B[0m \u001B[0;31m# 欧拉角算旋转矩阵   Η[3，1]传感器角度 x y z\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     15\u001B[0m \u001B[0;32mdef\u001B[0m \u001B[0mEulerToMatrix\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mH\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m---> 16\u001B[0;31m     \u001B[0mx\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0my\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mz\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mH\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;36m0\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0;36m0\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mH\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;36m1\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0;36m0\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mH\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;36m2\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0;36m0\u001B[0m\u001B[0;34m]\u001B[0m  \u001B[0;31m# 单位为角度\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m     17\u001B[0m     \u001B[0mx\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0my\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mz\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mx\u001B[0m \u001B[0;34m*\u001B[0m \u001B[0mpi\u001B[0m \u001B[0;34m/\u001B[0m \u001B[0;36m180\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0my\u001B[0m \u001B[0;34m*\u001B[0m \u001B[0mpi\u001B[0m \u001B[0;34m/\u001B[0m \u001B[0;36m180\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mz\u001B[0m \u001B[0;34m*\u001B[0m \u001B[0mpi\u001B[0m \u001B[0;34m/\u001B[0m \u001B[0;36m180\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     18\u001B[0m     r11, r12, r13 = cos(z) * cos(y), cos(z) * sin(y) * sin(x) - sin(z) * cos(x), cos(z) * sin(y) * cos(x) + sin(\n",
+      "\u001B[0;31mIndexError\u001B[0m: index 1 is out of bounds for axis 0 with size 1"
+     ]
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "outputs": [],
-   "source": [
-    "rou = (np.linalg.norm(residual) ** 2 - np.linalg.norm(new_residual) ** 2) / (step.T.dot(u * step + g))"
    ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "outputs": [],
    "source": [
-    "params = test.LM(200,params,theoryData[0],data_output)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "outputs": [],
-   "source": [
-    "check = test.my_Func(params,theoryData[0])"
+    "test.my_Func(params,theoryData[0])"
    ],
    "metadata": {
     "collapsed": false,
@@ -388,9 +303,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "asuka",
+   "name": "pycharm-ed95a014",
    "language": "python",
-   "display_name": "Asuka"
+   "display_name": "PyCharm (磁定位)"
   },
   "language_info": {
    "codemirror_mode": {
